--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -100,6 +100,19 @@ a:hover .header-profile-image {
   margin-bottom: 2vh;
 }
 
+.create h3 {
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.create .sub-title {
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+/* styling for idea button on home page */
+
 .create-idea {
   background-color: #115e67;
   width: 100%;
@@ -109,12 +122,12 @@ a:hover .header-profile-image {
   margin-bottom: 2vh;
 }
 
-.create h3 {
+.create-idea h3 {
   margin-top: 5px;
   margin-bottom: 0px;
 }
 
-.create .sub-title {
+.create-idea .sub-title {
   text-transform: uppercase;
   margin-top: 5px;
   margin-bottom: 0px;
