--- a/modules/ideas/client/views/list-ideas.client.view.html
+++ b/modules/ideas/client/views/list-ideas.client.view.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,40 +5,17 @@
   <link rel="stylesheet" href="../css/ideas.css">
 </head>
 <body>
-  <section class="ideaspage" ng-controller="IdeasController" ng-init="find()">
 
-    <div class="list-group" ng-repeat="idea in ideas|orderBy:'-title'">
+<section class="ideaspage" ng-controller="IdeasController" ng-init="find()">
+  <div class = "idea-list" ng-repeat="idea in ideas">
+    <div class="row item">
 
-      <div class="row">
-        <div class="col-xs-11">
-          <a ui-sref="ideas.view({ideaId: idea._id})" class="list-group-item">
-            <h4 class="list-group-item-heading">{{idea.title}}
-
-            <h6 class="list.group-item-heading">{{idea.category}}</h6>
-            <p class="list-group-item-text">{{idea.description.short}}</p>
-            </a>
-          </div>
-              <div class="col-xs-1">
-              <button ng-click = "liked=!liked" ng-model = "liked" class = "btn1">
-                  <span class = "base-class glyphicon" ng-class="liked ? 'glyphicon-heart' : 'glyphicon-heart-empty'">
-                 </span>
-              </button>
-
-            </div>
-
-
-
-
-
-
-<!--
-      <a class="list-group-item">
-        <h4 class="list-group-item-heading">{{idea.title}}</h4>
-        <h6 class="list.group-item-heading">{{idea.category}}</h6>
-        <p class="list-group-item-text">{{idea.description.short}}</p>
-      </a>
--->
-    </div>
+        <button ui-sref="ideas.view({ideaId: idea._id})" class="btn2">
+          <h4 class="item">{{idea.title}}</h4>
+        </button>
+        <button ng-click = "liked=!liked" ng-model = "liked" class = "btn2">
+          <span class = "base-class glyphicon" ng-class="liked ? 'glyphicon-heart' : 'glyphicon-heart-empty'"></span>
+        </button>
 
     </div>
   </div>
