--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -6,11 +6,21 @@
     <link rel="stylesheet" href="../css/ideas.css">
   </head>
   <section class = "ideaspage" ng-controller="IdeasController" ng-init="findOne()">
+
+
+      <div class="col-md-4">
+      <a class="btn btn-danger pull-right" ng-click="remove()">
+        <span class="glyphicon glyphicon-trash"></i>
+      </a>
+      <a class="btn btn-danger pull-right" ui-sref="ideas.edit({ideaId: idea._id})">
+        <span class="glyphicon glyphicon-edit"></i>
+      </a>
+      </div>
+
     <h1 class = "frontscreen" ng-bind="idea.title"></h1>
     <div class="idea-content" ng-bind="idea.description.long"></div>
-
     <div class="row">
-      <div class = "col-xs-6">
+      <div class = "col-md-4">
         <button ui-sref = "ideas.list()" class="btn btn-primary-1 pull-left">
         <span class="glyphicon glyphicon-arrow-left"></span>
         </button>
@@ -19,9 +29,6 @@
         <span class="glyphicon glyphicon-home"></span>
         </button>
 
-        <button ng-click="remove()" class="btn btn-danger">
-        <span class="glyphicon glyphicon-trash"></span>
-        </button>
       </div>
     </div>
 
