Fix welcome screen

--- a/modules/users/client/views/signin.client.view.html
+++ b/modules/users/client/views/signin.client.view.html
@@ -17,7 +17,7 @@
           </div>
     </form>
     <div class="welcome-screen">
-    <a ui-sref = "user.splash()">
+    <a ui-sref = "user.welcome()">
     First time using the app?  Click Here!
     </a>
     </div>
