--- a/modules/users/client/views/welcomescreens/welcome.client.view.html
+++ b/modules/users/client/views/welcomescreens/welcome.client.view.html
@@ -29,8 +29,7 @@
           </div>
           <div class="container2">
             <div style="margin-top:50px">
-            <a ui-sref="user.splash()" class="btn btn-primary outline"> Back </a>
-            &nbsp;
+            &nbsp
             <a ui-sref="user.welcome1()" class="btn btn-primary outline"> Next </a>
 
             </div>
