--- a/modules/projects/client/views/create-project-pick-category.client.view.html
+++ b/modules/projects/client/views/create-project-pick-category.client.view.html
@@ -3,10 +3,11 @@
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="width: 66%;">
         <span class="sr-only">66% Complete</span>
+        <p class="text-right">Step 2/3&nbsp;&nbsp;</p>
       </div>
     </div>
     <form name="projectFormCategories" class="form-verical">
-      <h2>Pick a category</h2>
+      <h2><b>Create Project: </b>Pick Project Category</h2>
       <div class="form-group">
         <section>
           <div class="btn-group" data-toggle="buttons">
@@ -21,7 +22,6 @@
         </section>
       </div>
       <button type="submit" ng-click="saveProjectCategory()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next ></button>
-      <p class="form-text text-center">Step 2/3</p>
     </form>
   </div>
 </section>
