--- a/modules/projects/client/views/create-project-pick-team.client.view.html
+++ b/modules/projects/client/views/create-project-pick-team.client.view.html
@@ -3,8 +3,11 @@
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width: 97%;">
         <span class="sr-only">97% Complete</span>
+        <p class="text-right">Step 3/3&nbsp;&nbsp;</p>
       </div>
     </div>
+    <h2><b>Create Project: </b>Select Team Members</h2>
+
     <h4>Current team</h4>
 
     <div class="tableWrapper">
@@ -40,6 +43,5 @@
       </table>
     </div>
     <button ng-click="create()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Add Project</button>
-    <p class="form-text text-center">Step 3/3</p>
   </div>
 </section>
