--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -3,9 +3,10 @@
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
         <span class="sr-only">33% Complete</span>
+        <p class="text-right">Step 1/3&nbsp;&nbsp;</p>
       </div>
     </div>
-    <h2>Add project</h2>
+    <h2><b>Create Project: </b>Add Project Details</h2>
     <form name="projectForm" class="form-vertical">
       <fieldset>
         <div class="form-group" show-errors>
@@ -30,7 +31,6 @@
           </div>
         </div>
         <button type="submit" ng-click="saveProjectInfo()" color="PMS 362c" class="btn btn-success btn-md btn-block">Next ></button>
-        <p class="form-text text-center">Step 1/3</p>
       </fieldset>
     </form>
   </div>
