--- a/modules/projects/client/views/create-project-pick-category.client.view.html
+++ b/modules/projects/client/views/create-project-pick-category.client.view.html
@@ -7,7 +7,8 @@
       </div>
     </div>
     <form name="projectFormCategories" class="form-verical">
-      <h2><b>Create Project: </b>Pick Project Category</h2>
+      <h3 class="text-center">Pick Project Category</h3>
+      <hr />
       <div class="form-group">
         <section>
           <div class="btn-group" data-toggle="buttons">
