--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -6,7 +6,8 @@
         <p class="text-right">Step 1/3&nbsp;&nbsp;</p>
       </div>
     </div>
-    <h2><b>Create Project: </b>Add Project Details</h2>
+    <h3 class="text-center">Add Project Details</h3>
+    <hr />
     <form name="projectForm" class="form-vertical">
       <fieldset>
         <div class="form-group" show-errors>
