--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -40,7 +40,7 @@
     <div class="comments-list">
       <div class="comment" ng-repeat="comment in idea.comments">
         <h6>{{comment.user.firstName}} {{comment.user.lastName}}</h6>
-        <p>Posted on: {{comment.posted}}</p>
+        <p>Posted on: {{comment.posted  | date: 'MM/dd/yyyy hh:mm a'}}</p>
         <p>{{comment.content}}</p>
       </div>
     </div>
