--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -55,7 +55,7 @@
         <div class="comments-list">
           <div class="comment" ng-repeat="comment in project.comments">
             <h6>{{comment.user.firstName}} {{comment.user.lastName}}</h6>
-            <p>Posted on: {{comment.posted}}</p>
+            <p>Posted on: {{comment.posted | date: 'MM/dd/yyyy hh:mm a'}}</p>
             <p>{{comment.content}}</p>
           </div>
         </div>
