--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -30,6 +30,11 @@
         </button>
 
       </div>
+      <div class="col-md-4" style="margin-top: 10px">
+        <button ng-click="ideaToProject()" class="btn btn-primary-1">
+          Make This a Project
+        </button>
+      </div>
     </div>
 
     <h3>Comments (<span ng-bind="idea.comments.length"></span>)</h3>
