delete a faq works now, removed most of the garbage faqs added css stuff

--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="col-lg-12">
-<section data-ng-controller="FAQsController" ng-init="find();">
+<section data-ng-controller="FAQsController" ng-init="find()">
   <div class="page-header">
     <div class="col-lg-12">
     <h1>Frequently Asked Questions</h1>
