--- a/modules/faqs/client/css/faqs.css
+++ b/modules/faqs/client/css/faqs.css
@@ -1,6 +1,3 @@
-/*
- * list
- */
 .list-group {
     margin: auto;
     padding: 10px;
@@ -11,92 +8,13 @@
     padding: 20px;
 }
 
-/*
- * projects-view
- */
-
-.voteButton {
-    background-color: #509E2F;
-}
-
-.unvoteButton {
-    background-color: #63666A;
-    color: white;
-}
-
-/*
- * projects-add
- */
-.view-title {
+.view-question {
     margin: auto;
     width: 500px;
     padding: 10px;
 }
 
-.view-media {
-    margin: auto;
-    width: 500px;
-    padding: 10px;
-}
-
-.view-desc {
-    margin: auto;
-    width: 500px;
-    padding: 10px;
-}
-
-ul.team-list {
+ul {
     list-style-type: none;
-    width: 100%;
-    padding: 0px;
-    margin-bottom: 15px;
-    line-height: 24px;
-    font-size: 16px;
 }
 
-ul.team-list li {
-    margin-top: 8px;
-}
-
-ul.team-list li i {
-    float: left;
-    background-color: grey;
-    border: 3px solid #333333;
-    border-radius: 100px;
-    width: 24px;
-    height: 24px;
-    text-align: center;
-    margin-right: 15px;
-    font-size: 12px;
-    line-height: 16px;
-}
-
-.progress-bar {
-    background-color: #115e67;
-}
-
-.project-content {
-    clear: both;
-    margin: 15px 0 25px 0;
-}
-
-.project-item {
-    cursor: pointer;
-}
-
-
-/* projects-vote */
-thead {
-    background-color: #509E2F;
-}
-
-tbody {
-    background-color: white;
-}
-
-.comment {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin-bottom: 10px;
-    background-color: #eee;
-}
