--- a/modules/faqs/client/views/respond-faq.client.view.html
+++ b/modules/faqs/client/views/respond-faq.client.view.html
@@ -12,7 +12,7 @@
         <div class = "col-lg-2">
           <ul>
             <li>
-              <button ui-sref = "faqs.list()" class="btn btn-primary-1 pull-left">
+              <button ui-sref = "faqs.list()" class="btn btn-primary-1">
                 <span class="glyphicon glyphicon-arrow-left"></span>
               </button>
             </li>
