--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -8,20 +8,20 @@
 <div class="col-lg-12">
 <section data-ng-controller="FAQsController" ng-init="find()">
   <div class="page-header">
-    <div class="col-lg-12">
+    <div>
     <h1>Frequently Asked Questions</h1>
     <div class="row" style="padding-bottom: 10px;">
       <button data-toggle="collapse" class="btn btn-group-lg" ng-click="askme=!askme">Ask a question</button>
       <div class="pull-right">
-        <div class = "col-lg-2">
-          <button ui-sref = "home()" class="btn btn-primary-1">
+        <div class="col-lg-2">
+          <button ui-sref="home()" class="btn btn-primary-1">
             <span class="glyphicon glyphicon-home"></span>
           </button>
         </div>
       </div>
       <h2 ng-bind="faq.question"></h2>
     </div>
-    <div class="col-lg-12" ng-show="askme">
+    <div ng-show="askme">
       <form name="faqForm" class="form-vertical">
         <fieldset>
           <div class="form-group" show-errors>
@@ -36,10 +36,13 @@
     </div>
     </div>
   </div>
-  <div class="list-group col-lg-12" id="faqs-list" ng-repeat="faq in faqs" ui-sref="faqs.respond({faqId: faq._id})">
+  <div id="faqs-list" ng-repeat="faq in faqs" ui-sref="faqs.respond({faqId: faq._id})">
     <a  class="list-group-item">
       <h4 class="list-group-item-heading" ng-click="showme=!showme"> {{faq.question}} </h4>
+  <!--  <input class="glyphicon-check pull-right" ng-model="faq.solution" name="solution" ng-submit="">
+    -->
     </a>
+
   </div>
 </section>
 </div>
