--- a/modules/faqs/client/views/respond-faq.client.view.html
+++ b/modules/faqs/client/views/respond-faq.client.view.html
@@ -30,12 +30,13 @@
         </div>
       </div>
       <h2 class="col-lg-8" ng-bind="faq.question"></h2>
+      <h3 class="col-lg-8" ng-bind="faq.solution"></h3>
     </div>
     <div class="answers">
       <div class="answer" ng-repeat="answer in faq.answers">
         <h6>Posted by {{answer.user.firstName}} {{answer.user.lastName}} </h6>
         <p>{{answer.date | date: 'MM/dd/yyyy hh:mm a'}}</p>
-        <div>{{answer.answer}}<a class="btn btn-primary-1 pull-right" ng-click="bestSolution()">
+        <div>{{answer.answer}}<a class="btn btn-primary-1 pull-right" ng-click="bestSolution({faqId: faq._id})">
           <i class="glyphicon glyphicon-check"></i>
         </a>
         </div>
