--- a/modules/subevents/client/views/view.client.view.html
+++ b/modules/subevents/client/views/view.client.view.html
@@ -4,5 +4,5 @@
   <p>Date/Time: <span ng-bind="subevent.datetime"></span></p>
   <p>Location: <span ng-bind="subevent.location"></span></p>
 
-  <div ng-bind="subevent.description"></div>
+  <div ta-bind ng-model="subevent.description"></div>
 </section>
