--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -29,7 +29,7 @@
         <iframe width="100%" height="300" src="{{project.youtube}}" frameborder="0" allowfullscreen></iframe>
       </div>
 
-      <div class="project-content" ng-bind="project.description.long"></div>
+      <div ta-bind ng-model="project.description.long"></div>
       <div>
         <button type="button" ng-click="hasVoted ? unvote(project) : vote(project)"
                 class="btn btn-md btn-block" ng-class="hasVoted ? 'unvoteButton' : 'voteButton'">
