--- a/modules/subevents/client/views/create.client.view.html
+++ b/modules/subevents/client/views/create.client.view.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group">
       <label for="description">Description</label>
-      <textarea name="description" type="text" ng-model="description" id="description" class="form-control" placeholder="Description"></textarea>
+      <text-angular id="description" ng-model="description"></text-angular>
     </div>
     <div class="form-group">
       <label for="location">Location</label>
