--- a/modules/faqs/client/views/respond-faq.client.view.html
+++ b/modules/faqs/client/views/respond-faq.client.view.html
@@ -32,11 +32,15 @@
       <h2 class="col-lg-8" ng-bind="faq.question"></h2>
     </div>
     <div class="answers">
-      <tr ng-repeat-start="answer in faq.answers | filter: solutionFound('answer.isSolution', true)">
+      <tr ng-repeat-start="answer in faq.answers | filter: solutionFound('isSolution', true)">
+        <h4>Solution Posted by {{answer.user.firstName}} {{answer.user.lastName}} </h4>
+        <p>{{answer.date | date: 'MM/dd/yyyy hh:mm a'}}</p>
+        <div><h3>{{answer.answer}}</h3></div>
+      </tr>
       <div class="answer" ng-repeat="answer in faq.answers">
         <h6>Posted by {{answer.user.firstName}} {{answer.user.lastName}} </h6>
         <p>{{answer.date | date: 'MM/dd/yyyy hh:mm a'}}</p>
-        <div>{{answer.answer}}<a class="btn btn-primary-1 pull-right" ng-click="markBestSolution({faqId: faq._id},$index)">
+        <div>{{answer.answer}}<a ng-model="isSolution" ng-value="true" class="btn btn-primary-1 pull-right" name="isSolution" type="Boolean" ng-click="markBestSolution(answer)">
           <i class="glyphicon glyphicon-check"></i>
         </a>
         </div>
