formatting and style changes

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -170,3 +170,21 @@ a:hover .header-profile-image {
   margin-top: 5px;
   margin-bottom: 0px;
 }
+/*
+* Home - Articles
+*/
+.create-article {
+  font-family: DINBold, Arial;
+  background-color: #63666A;
+  width:100%;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+  margin-bottom: 2vh;
+}
+.create-article h3 {
+  font-family: DINBold, Arial;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
