--- a/modules/ideas/client/views/create-idea.client.view.html
+++ b/modules/ideas/client/views/create-idea.client.view.html
@@ -18,7 +18,7 @@
         <span class="glyphicon glyphicon-arrow-left"></span>
         </button>
 
-        <button type="submit" ng-click="create()" class="btn btn-primary">
+        <button type="submit" ng-click="create()" class="btn btn-primary-1">
           Submit
         </button>
         </div>
