--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -7,40 +7,43 @@
   </head>
   <section class = "ideaspage" ng-controller="IdeasController" ng-init="findOne()">
 
-
-      <div class="col-md-4">
-      <a class="btn btn-danger pull-right" ng-click="remove()">
-        <span class="glyphicon glyphicon-trash"></i>
-      </a>
-      <a class="btn btn-danger pull-right" ui-sref="ideas.edit({ideaId: idea._id})">
-        <span class="glyphicon glyphicon-edit"></i>
-      </a>
-      </div>
-
+<div class="row">
+  <div class="col-md-4 col-xs-6">
     <h1 class = "frontscreen" ng-bind="idea.title"></h1>
-    <div class="idea-content" ng-bind="idea.description.long"></div>
-    <div class="row">
-      <div class = "col-md-4">
-        <button ui-sref = "ideas.list()" class="btn btn-primary-1 pull-left">
+  </div>
+  <div class="col-md-4 col-xs-6 pull-right">
+    <a class="btn btn-danger pull-right" ng-click="remove()">
+      <span class="glyphicon glyphicon-trash"></i>
+    </a>
+    <a class="btn btn-danger pull-right" ui-sref="ideas.edit({ideaId: idea._id})">
+      <span class="glyphicon glyphicon-edit"></i>
+    </a>
+  </div>
+
+</div>
+  <div class="idea-content" ng-bind="idea.description.long" style="margin-bottom: 10vh"></div>
+  <div class="row">
+    <div class = "col-md-4" style="margin-bottom: 10px">
+      <button ui-sref = "ideas.list()" class="btn btn-primary-1 pull-left">
         <span class="glyphicon glyphicon-arrow-left"></span>
-        </button>
+      </button>
 
-        <button ui-sref = "home()" class="btn btn-primary-1">
+      <button ui-sref = "home()" class="btn btn-primary-1">
         <span class="glyphicon glyphicon-home"></span>
-        </button>
+      </button>
 
-      </div>
-      <div class="col-md-4" style="margin-top: 10px">
-        <button ng-click="ideaToProject()" class="btn btn-primary-1">
-          Make This a Project
-        </button>
-      </div>
     </div>
+    <div class="col-md-4">
+      <button ng-click="ideaToProject()" class="btn btn-primary-1">
+        Make This a Project
+      </button>
+    </div>
+  </div>
 
     <h3>Comments (<span ng-bind="idea.comments.length"></span>)</h3>
     <div class="clearfix" style="margin-bottom: 15px">
       <textarea name="comment" ng-model="comment" rows="5" class="form-control" placeholder="Please provide your feedback..." required></textarea>
-      <button class="btn btn-primary pull-right" ng-click="addComment()">Add Comment</button>
+      <button class="btn btn-primary pull-right" style = "margin-top: 10px" ng-click="addComment()">Add Comment</button>
     </div>
     <div class="comments-list">
       <div class="comment" ng-repeat="comment in idea.comments">
