--- a/modules/articles/client/views/create-article.client.view.html
+++ b/modules/articles/client/views/create-article.client.view.html
@@ -17,12 +17,12 @@
           <textarea name="content" ng-model="content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
         </div>
         <div class="row">
-          <div class="col-md-4 col-xs-3" style="padding-left: 0">
+          <div class="col-md-2 col-xs-3" style="padding-left: 0; margin-right: 0">
             <div class ="btn btn-primary-2" ui-sref="home()">
               <i class="glyphicon glyphicon-arrow-left"></i>
             </div>
           </div>
-          <div class="col-md-4 col-xs-4" style="padding-left: 0">
+          <div class="col-md-2 col-xs-4" style="padding-left: 0">
             <div class="form-group">
               <input type="submit" class="btn btn-primary-2">
             </div>
