welcome screen finishing touches

--- a/modules/users/client/views/welcomescreens/welcome.client.view.html
+++ b/modules/users/client/views/welcomescreens/welcome.client.view.html
@@ -31,8 +31,8 @@
       </div>
     </form>
 
-    <div class="form-group">
-      <a ui-sref="user.welcome1()" class="btn btn-primary">Next</a>
+    <div class="container2">
+      <a ui-sref="user.welcome1()" class="btn btn-primary outline">Next</a>
     </div>
 
   </div>
