--- a/modules/users/client/views/welcomescreens/welcome1.client.view.html
+++ b/modules/users/client/views/welcomescreens/welcome1.client.view.html
@@ -16,10 +16,13 @@
           <div style="margin-bottom:10vh">
             <h3 class="text-left">Articles and Frequently Asked Questions (FAQ)</h3>
             <p class="text-left">
-              Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</li>
-              Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</li>
-              Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</li>
-              Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</li>
+              Having trouble with a section in the app?  The frequently asked questions section allows users to
+              post and reply to questions asked by fellow Hackathon app users.  Submitting a question is simple and responses
+              are compiled for everybody to see.
+
+              Need to post something important or visible to everybody?  Submit an article through the home page.
+
+              </li>
             </p>
           </div>
           <div class="container2">
