--- a/modules/users/client/views/welcomescreens/welcome2.client.view.html
+++ b/modules/users/client/views/welcomescreens/welcome2.client.view.html
@@ -9,19 +9,16 @@
           <div style="margin-bottom:10vh">
             <h3 class="text-left">Events and Schedules </h3>
               <p class="text-left">
-                 Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</li>
-                 Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</li>
-                 Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</li>
-                 Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</li>
+                 Track the progress of your next Event with the Hackathon's built in event timer.  The main timer located on the home page
+                 gives users a real-time countdown until their next event begins.  Schedules allow you to view subevents in each Hackathon.
+                 This section allows you to organize your time during the Hackathon and provides a convenient way of keeping track of
+                all your assigned events.</li>
               </p>
           </div>
           <div style="margin-bottom:10vh">
-            <h3 class="text-left">Get Started Today!</h3>
+            <h2 class="text-center">Get Started Today!</h2>
             <p class="text-left">
-              Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</li>
-              Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</li>
-              Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</li>
-              Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</li>
+              </li>
             </p>
           </div>
           <div class="container2">
