--- a/modules/subevents/client/css/subevents.css
+++ b/modules/subevents/client/css/subevents.css
@@ -37,3 +37,9 @@
     line-height: 30px;
     font-size: 14px;
 }
+
+.subevent-header {
+    background-color: #115e67;
+    padding: 50px 15px;
+    color: white;
+}
