--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -25,7 +25,7 @@
       <p><small>Category: </small><strong ng-bind="project.category"></strong></p>
     </div>
     <div class="col-xs-12" style="background-color: white;padding:30px;">
-      <div ng-show="project.youtube != null">
+      <div ng-show="project.youtube != null && project.youtube != ''">
         <iframe width="100%" height="300" src="{{project.youtube}}" frameborder="0" allowfullscreen></iframe>
       </div>
 
