--- a/modules/projects/client/views/list-projects-votes.client.view.html
+++ b/modules/projects/client/views/list-projects-votes.client.view.html
@@ -14,9 +14,10 @@
   <div class="col-xs-12">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#all">All Projects</a></li>
+      <!--
       <li><a data-toggle="tab" href="#category1">Category 1</a></li>
       <li><a data-toggle="tab" href="#category2">Category 2</a></li>
-      <li><a data-toggle="tab" href="#category3">Category 3</a></li>
+      <li><a data-toggle="tab" href="#category3">Category 3</a></li> -->
     </ul>
 
     <div class="tab-content">
@@ -41,6 +42,7 @@
           </div>
         </div>
 
+        <!--
         <div id="category1" class="tab-pane fade">
           <h3>Category 1 Projects</h3>
         </div>
@@ -49,7 +51,7 @@
         </div>
         <div id="category3" class="tab-pane fade">
           <h3>Category 3 Projects</h3>
-        </div>
+        </div> -->
       </div>
     </div>
 </section>
