Fix some view stuff

--- a/modules/projects/client/views/edit-project.client.view.html
+++ b/modules/projects/client/views/edit-project.client.view.html
@@ -1,7 +1,7 @@
 <section ng-controller="ProjectsController" ng-init="findOne()">
 
   <h2>Edit Project</h2>
-  <div class="col-md-offset-2 col-md-8">
+  <div>
     <form name="projectForm" class="form-vertical" ng-submit="update(projectForm.$valid)">
       <fieldset>
         <div class="form-group" show-errors>
