--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -15,7 +15,7 @@
       <p><small>Category: </small><strong ng-bind="project.category"></strong></p>
     </div>
 
-      <div class="col-md-offset-2 col-md-8" style="padding-bottom: 10px;">
+      <div style="padding-bottom: 10px;">
         <div class="row">
           <div class="col-md-4 col-md-6 pull-right">
             <a class="btn btn-danger pull-right" ng-click="remove()">
