--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -7,7 +7,7 @@
       <h4 ng-if="activeEvent.inProgress"><span ng-bind="activeEvent.timer"></span> hrs remaining</h4>
       <h4 ng-if="!activeEvent.inProgress"><span ng-bind="activeEvent.timer"></span> till event</h4>
     </div>
-  <form class="col-md-offset-2 col-md-8">
+  <form>
     <div class="create-idea" ui-sref="ideas.create()">
       <h3 class="title">Upload an idea</h3>
       <p class="description">The basics, please.  What is your project?  What does it do?</p>
