--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -1,5 +1,5 @@
 <section ng-controller="ProjectsController">
-  <div class="col-md-4 col-md-6 ">
+  <div class="col-xs-12">
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
         <span class="sr-only">33% Complete</span>
