--- a/modules/core/client/views/admin/index.client.view.html
+++ b/modules/core/client/views/admin/index.client.view.html
@@ -1,5 +1,5 @@
 <section ng-controller="HomeController">
-  <form class="col-md-offset-2 col-md-8">
+  <form >
     <div class="row-admin">
       <div class="row-item-admin">
         <a ui-sref="events.index()" class="btn-primary-admin">Manage Events</a>
