--- a/modules/ideas/client/views/edit-idea.client.view.html
+++ b/modules/ideas/client/views/edit-idea.client.view.html
@@ -7,7 +7,7 @@
   <div class="idea-edit">
     <h3>Edit idea</h3>
   </div>
-  <div class="col-md-offset-2 col-md-8">
+  <div >
     <form name="ideaForm" class="form-vertical" ng-submit="update(ideaForm.$valid)">
       <fieldset>
         <div class="form-group" show-errors>
