--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -25,11 +25,11 @@
         </div>
       </div>
 
-      <div class="col-md-offset-2 col-md-8">
+      <div >
 
         <div class="idea-content" ng-bind="idea.description.long"></div>
 
-        <div class="col-md-offset-2 col-md-8">
+        <div >
           <h3 class="idea-team">Interested</h3>
           <ul class="team-list">
             <li>
