--- a/modules/ideas/client/views/success.client.view.html
+++ b/modules/ideas/client/views/success.client.view.html
@@ -1,6 +1,6 @@
 
 <section class = "ideaspage" ng-controller="IdeasController">
-  <div class="col-md-offset-2 col-md-8">
+  <div >
     <h2 class="backscreen">Ideas updated Successfully!</h2>
         <a ui-sref="home()" class="btn btn-primary-1" >Home</a>
   </div>
