--- a/modules/users/client/views/signin.client.view.html
+++ b/modules/users/client/views/signin.client.view.html
@@ -1,7 +1,7 @@
 <div class="authpage" ng-controller="AuthenticationController">
   <div class="alert alert-danger" ng-if="error">{{error}}</div>
 
-  <div class="col-md-offset-2 col-md-8">
+  <div >
 
     <form ng-submit="signin()">
       <div class="welcome-screen">
