--- a/modules/users/client/views/welcomescreens/welcome.client.view.html
+++ b/modules/users/client/views/welcomescreens/welcome.client.view.html
@@ -8,7 +8,7 @@
   </head>
 <div class="authpage" ng-controller="AuthenticationController">
 
-  <div class="col-md-offset-2 col-md-8">
+  <div >
 
     <form>
       <div class="welcome-screen">
