--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -9,7 +9,7 @@
 <section ng-controller="ProjectsController" ng-init="find()">
   <div>
     <h3><span ng-bind="activeEvent.title"></span> Projects</h3>
-    <div class="list-group" id="projects-list" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects">
+    <div id="projects-list" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects">
       <a  class="list-group-item">
         <h4 class="list-group-item-heading">{{project.title}}</h4>
         <h6 class="list-group-item-heading">{{project.category}}</h6>
