--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -9,7 +9,7 @@
     <div class="row">
       <h1 class="frontscreen" ng-bind="idea.title"></h1>
       <div class="row">
-        <div class="col-md-4 col-md-6 pull-right">
+        <div class="col-xs-12 pull-right">
           <a class="btn btn-danger pull-right" ng-click="remove()">
             <span class="glyphicon glyphicon-trash"></span>
           </a>
