--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -17,7 +17,7 @@
 
       <div style="padding-bottom: 10px;">
         <div class="row">
-          <div class="col-md-4 col-md-6 pull-right">
+          <div class="col-xs-12">
             <a class="btn btn-danger pull-right" ng-click="remove()">
               <span class="glyphicon glyphicon-trash"></span>
             </a>
