--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -23,7 +23,7 @@
 </section>
 
 <section ng-controller="ArticlesController" ng-init="find()">
-  <div class="col-md-offset-2 col-md-8">
+  <div>
     <div class="article" ng-repeat="article in articles" ui-sref="articles.view({articleId: article._id})">
       <h3 class="title">{{article.title}}</h3>
       <p class="description">{{article.content}}</p>
