--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -26,7 +26,7 @@
   <div>
     <div class="article" ng-repeat="article in articles" ui-sref="articles.view({articleId: article._id})">
       <h3 class="title">{{article.title}}</h3>
-      <p class="description">{{article.content}}</p>
+      <p class="description">{{article.shortDesc}}</p>
     </div>
   </div>
 </section>
