--- a/modules/faqs/client/views/respond-faq.client.view.html
+++ b/modules/faqs/client/views/respond-faq.client.view.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <textarea name="answer" rows="1" ng-model="answer" class="form-control" placeholder="Add your answer here!" required></textarea>
-    <button class="btn btn-primary-1 col-xs-12 pull-left" ng-click="addAnswer()">Post Answer <span class="glyphicon glyphicon-floppy-save pull-right"></span></button>
+    <button class="btn btn-success btn-lg btn-block" ng-click="addAnswer()">Post Answer <span class="glyphicon glyphicon-floppy-save pull-right"></span></button>
     </div>
 </section>
 
